--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python -m unittest
+  - (cd src && python -m unittest discover ../tests)
