--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
 - pip install -r requirements.txt
 script:
-- "(cd src && python -m unittest discover ../tests)"
+- "./runTests.sh"
 deploy:
   provider: heroku
   api_key:
