Added praat package dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+numpy==1.15.2
+praat-parselmouth==0.3.2
 waitress==1.1.0
 Werkzeug==0.14.1
