--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
