--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+backports.functools-lru-cache==1.5
 Click==7.0
+cycler==0.10.0
 Flask==1.0.2
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
+kiwisolver==1.0.1
 MarkupSafe==1.0
+matplotlib==2.2.3
 numpy==1.15.2
+pandas==0.23.4
 praat-parselmouth==0.3.2
+pyparsing==2.3.0
+python-dateutil==2.7.5
+pytz==2018.7
+scipy==1.1.0
+seaborn==0.9.0
+six==1.11.0
 waitress==1.1.0
 Werkzeug==0.14.1
