--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 backports.functools-lru-cache==1.5
+BTrees==4.5.1
 Click==7.0
 cycler==0.10.0
 Flask==1.0.2
@@ -10,6 +11,7 @@ MarkupSafe==1.0
 matplotlib==2.2.3
 numpy==1.15.2
 pandas==0.23.4
+persistent==4.4.3
 praat-parselmouth==0.3.2
 pyparsing==2.3.0
 python-dateutil==2.7.5
@@ -17,5 +19,11 @@ pytz==2018.7
 scipy==1.1.0
 seaborn==0.9.0
 six==1.11.0
+transaction==2.4.0
 waitress==1.1.0
 Werkzeug==0.14.1
+zc.lockfile==1.3.0
+ZConfig==3.3.0
+ZODB==5.5.1
+zodbpickle==1.0.2
+zope.interface==4.6.0
