--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
