--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "konva": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-konva": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
