--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-konva": "^16.5.2",
+    "react-media-player": "^0.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
