--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ matplotlib==2.2.3
 numpy==1.15.2
 pandas==0.23.4
 persistent==4.4.3
-praat-parselmouth==0.3.2
+praat-parselmouth==0.3.2.post2
 pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
