--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^16.5.2",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
