--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "konva": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
