--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,13 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.3",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.3",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "konva": "^2.5.1",
@@ -19,7 +26,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
