--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.0.3",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/tone": "git://github.com/Tonejs/TypeScript.git",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "konva": "^2.5.1",
@@ -27,6 +28,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "tone": "^13.4.9",
     "typescript": "^3.3.3333"
   },
   "scripts": {
@@ -44,5 +46,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {}
 }
