--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "recorder-js": "^1.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "tone": "^13.4.9",
