--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
+    "js-file-download": "^0.4.5",
     "konva": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "query-string": "^6.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
