--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
     "@types/react": "^16.8.8",
@@ -13,7 +15,11 @@
     "@types/react-redux": "^7.0.3",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/sinon": "^7.0.10",
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
+    "chai": "^4.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.5",
@@ -28,9 +34,11 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-test-renderer": "^16.8.5",
     "recorder-js": "^1.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "sinon": "^7.3.0",
     "tone": "^13.4.9",
     "typescript": "^3.3.3333"
   },
@@ -50,5 +58,7 @@
     "not op_mini all"
   ],
   "proxy": "http://localhost:5000",
-  "devDependencies": {}
+  "devDependencies": {
+    "chai-enzyme": "^1.0.0-beta.1"
+  }
 }
