--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,11 +39,11 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
-    "tone": "^13.4.9",
-    "typescript": "^3.3.3333"
+    "tone": "^13.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "tslint -c tslint.json src/**/*.{ts,tsx}",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -59,6 +59,8 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "chai-enzyme": "^1.0.0-beta.1"
+    "chai-enzyme": "^1.0.0-beta.1",
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.4000"
   }
 }
