Implemented TSLint rules across all TypeScript components.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,9 +20,10 @@
     "jsx": "preserve"
   },
   "include": [
-    "src"
-  ],
+      "src"
+    ],
   "exclude": [
-    "src/Lib/**/*"
+      "src/Lib/**/*",
+      "src/**/*.test.*"
   ]
 }
