--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
-    "tone": "^13.4.9"
+    "tone": "^13.4.9",
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,7 +61,6 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "chai-enzyme": "^1.0.0-beta.1",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "tslint": "^5.14.0"
   }
 }
