--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
     "tone": "^13.4.9",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "tslint": "^5.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,7 +61,6 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "chai-enzyme": "^1.0.0-beta.1",
-    "tslint": "^5.14.0"
+    "chai-enzyme": "^1.0.0-beta.1"
   }
 }
