--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.5.2",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
+    "react-pie-menu": "^0.2.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
@@ -39,9 +40,10 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
+    "styled-components": "^4.2.0",
     "tone": "^13.4.9",
-    "typescript": "^3.3.4000",
-    "tslint": "^5.14.0"
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,6 +63,7 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/styled-components": "^4.1.13",
     "chai-enzyme": "^1.0.0-beta.1"
   }
 }
