--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/chai": "^4.1.7",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.11",
@@ -21,6 +24,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "font-awesome": "^4.7.0",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.5",
