--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
     "styled-components": "^4.2.0",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "@types/d3-scale": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -69,7 +70,6 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@types/d3-scale": "^2.1.1",
     "chai-enzyme": "^1.0.0-beta.1"
   }
 }
