--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/chai": "^4.1.7",
+    "@types/d3-scale": "^2.1.1",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
@@ -21,6 +22,7 @@
     "@types/sinon": "^7.0.10",
     "@types/styled-components": "^4.1.13",
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
+    "@types/react-file-reader-input": "^1.1.4",
     "chai": "^4.2.0",
     "d3-scale": "^3.0.0",
     "enzyme": "^3.9.0",
@@ -35,6 +37,7 @@
     "query-string": "^6.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-file-reader-input": "^2.0.0",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
     "react-pie-menu": "^0.2.4",
@@ -49,8 +52,7 @@
     "styled-components": "^4.2.0",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000",
-    "@types/d3-scale": "^2.1.1"
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
