Fixed coveralls integration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ jobs:
     install:
     - "(cd frontend && npm ci)"
     script:
-    - bash runTests.sh --nodejs
-    - npm run coveralls
+    - bash runTests.sh --nodejs-coverage
   - stage: deploy
     script: skip
     deploy: &heroku
