--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/chai-enzyme": "^0.6.6",
     "chai-enzyme": "^1.0.0-beta.1"
   }
 }
