--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,46 @@
+attrs==19.1.0
 backports.functools-lru-cache==1.5
 BTrees==4.5.1
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
 Click==7.0
 cycler==0.10.0
+flasgger==0.9.2
 Flask==1.0.2
+functools32==3.2.3.post2
+gevent==1.4.0
+greenlet==0.4.15
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==3.0.1
 kiwisolver==1.0.1
+locustio==0.11.0
 MarkupSafe==1.0
 matplotlib==2.2.3
+mistune==0.8.4
+msgpack==0.6.1
 numpy==1.15.2
 pandas==0.23.4
 persistent==4.4.3
-praat-parselmouth==0.3.2.post2
+praat-parselmouth==0.3.2
+pyAudioAnalysis==0.2.5
+pycparser==2.19
 pyparsing==2.3.0
+pyrsistent==0.14.11
 python-dateutil==2.7.5
 pytz==2018.7
+PyYAML==5.1
+pyzmq==18.0.1
+requests==2.21.0
+scikit-learn==0.20.3
 scipy==1.1.0
 seaborn==0.9.0
 six==1.11.0
 transaction==2.4.0
+urllib3==1.24.3
 waitress==1.1.0
 Werkzeug==0.14.1
 zc.lockfile==1.3.0
