--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ msgpack==0.6.1
 numpy==1.15.2
 pandas==0.23.4
 persistent==4.4.3
-praat-parselmouth==0.3.2
+praat-parselmouth==0.3.2.post2
 pyAudioAnalysis==0.2.5
 pycparser==2.19
 pyparsing==2.3.0
