Ignoring coverage metrics for lib dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,9 @@
     "coverageReporters": [
       "text",
       "html"
+    ],
+    "collectCoverageFrom": [
+      "!src/Lib/**/*.js"
     ]
   },
   "eslintConfig": {
