--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,7 @@
     "start-js": "react-scripts start",
     "tslint": "tslint -p tsconfig.json -c tslint.json src/**/*.{ts,tsx}",
     "build": "npm run build-css && react-scripts build",
-    "test": "npm run tslint && react-scripts test",
+    "test": "npm run tslint && npm run build-css && react-scripts test",
     "coveralls": "react-scripts test --coverage --coverageReporters=text-lcov | coveralls",
     "eject": "react-scripts eject"
   },
