Removed react-scripts code from code coverage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,7 +78,8 @@
       "src/**/*.jsx",
       "src/**/*.tsx",
       "src/**/*.ts",
-      "!src/Lib/**/*.js"
+      "!src/Lib/**/*.js",
+      "!src/serviceWorker.js"
     ]
   },
   "eslintConfig": {
