--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@types/react-redux": "^7.0.3",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-select": "^3.0.5",
+    "@types/recompose": "^0.30.7",
     "@types/sinon": "^7.0.10",
     "@types/styled-components": "^4.1.13",
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
@@ -28,6 +30,8 @@
     "d3-scale": "^3.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "firebase": "^6.3.3",
+    "firebaseui": "^4.1.0",
     "font-awesome": "^4.7.0",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.4.0",
@@ -45,9 +49,11 @@
     "react-media-player": "^0.7.5",
     "react-pie-menu": "^0.2.4",
     "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.8",
+    "react-select": "^3.0.8",
     "react-test-renderer": "^16.8.5",
+    "recompose": "^0.30.0",
     "recorder-js": "^1.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
