--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ python-dateutil==2.7.5
 pytz==2018.7
 PyYAML==5.1
 pyzmq==18.0.1
+psycopg2==2.8.3
 requests==2.21.0
 scikit-learn==0.20.3
 scipy==1.1.0
