--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/chai": "^4.1.7",
     "@types/d3-scale": "^2.1.1",
     "@types/enzyme": "^3.9.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
     "@types/react": "^16.8.8",
@@ -30,6 +31,7 @@
     "d3-scale": "^3.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "file-saver": "^2.0.2",
     "firebase": "^6.3.3",
     "firebaseui": "^4.1.0",
     "font-awesome": "^4.7.0",
@@ -39,6 +41,7 @@
     "konva": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
+    "multiselect-dropdown-react": "^1.0.5",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "query-string": "^6.4.0",
@@ -61,7 +64,8 @@
     "styled-components": "^4.2.0",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "xlsx": "^0.15.4"
   },
   "scripts": {
     "build-css": "node-sass --include-path ./src --include-path ./node_modules src/ -o src/",
