--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,9 @@
     "npm-run-all": "^4.1.5",
     "query-string": "^6.4.0",
     "react": "^16.5.2",
+    "react-data-export": "^0.6.0",
     "react-dom": "^16.5.2",
+    "react-export-excel": "^0.5.2",
     "react-file-reader-input": "^2.0.0",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
