--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/cash": "0.0.3",
     "@types/chai": "^4.1.7",
     "@types/d3-scale": "^2.1.1",
     "@types/enzyme": "^3.9.1",
     "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.0.11",
+    "@types/jquery": "^3.3.32",
+    "@types/materialize-css": "^1.0.7",
     "@types/node": "^11.11.3",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
@@ -24,6 +27,7 @@
     "@types/react-select": "^3.0.5",
     "@types/recompose": "^0.30.7",
     "@types/sinon": "^7.0.10",
+    "@types/sizzle": "^2.3.2",
     "@types/styled-components": "^4.1.13",
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
     "chai": "^4.2.0",
