Google Analytics Changes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.5.2",
     "react-export-excel": "^0.5.2",
     "react-file-reader-input": "^2.0.0",
+    "react-ga": "^2.7.0",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
     "react-pie-menu": "^0.2.4",
