--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@types/cash": "0.0.3",
     "@types/chai": "^4.1.7",
     "@types/d3-scale": "^2.1.1",
@@ -59,6 +61,7 @@
     "react-https-redirect": "^1.1.0",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
+    "react-notifications": "^1.5.0-beta.0",
     "react-pie-menu": "^0.2.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.1",
