--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "@angular/core": "^2.4.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
@@ -58,7 +60,9 @@
     "react-file-reader": "^1.1.4",
     "react-file-reader-input": "^2.0.0",
     "react-ga": "^2.7.0",
+    "react-html-parser": "^2.0.2",
     "react-https-redirect": "^1.1.0",
+    "react-input-checkbox": "^0.1.6",
     "react-konva": "^16.5.2",
     "react-media-player": "^0.7.5",
     "react-notifications": "^1.5.0-beta.0",
