--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,7 +91,7 @@
     "tslint": "tslint -p tsconfig.json -c tslint.json src/**/*.{ts,tsx}",
     "build": "npm run build-css && react-scripts build",
     "test": "npm run tslint && npm run build-css && react-scripts test",
-    "coveralls": "npm run tslint && npm run build-css && react-scripts test --coverage --coverageReporters=text-lcov | coveralls",
+    "coveralls": "npm run tslint && npm run build-css && react-scripts test --coverage --coverageReporters=text-lcov",
     "eject": "react-scripts eject"
   },
   "jest": {
