--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "8.12.0"
+  },
   "scripts": {
     "heroku-prebuild": "cd frontend && npm ci && npm run build --verbose"
   }
