--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ pandas==0.23.4
 pathlib==1.0.1
 pathlib2==2.3.6
 persistent==4.4.3
+pg8000==1.12.5
 Pillow==6.2.2
 pkg-resources==0.0.0
 pluggy==0.13.1
@@ -81,6 +82,8 @@ scipy==1.1.0
 seaborn==0.9.0
 six==1.14.0
 subprocess32==3.5.4
+testing.common.database==2.0.3
+testing.postgresql==1.3.0
 transaction==2.4.0
 uritemplate==3.0.1
 urllib3==1.24.3
