--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ BTrees==4.5.1
 CacheControl==0.12.6
 cachetools==3.1.1
 certifi==2019.3.9
-cffi==1.12.3
+cffi
 chardet==3.0.4
 Click==7.0
 configparser==4.0.2
@@ -18,8 +18,6 @@ flasgger==0.9.2
 Flask==1.1.1
 Flask-Cors==3.0.8
 funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.3.0
 gevent==1.4.0
 google-api-core==1.31.3
 google-api-python-client==1.12.8
@@ -47,9 +45,9 @@ matplotlib==2.2.4
 mistune==0.8.4
 more-itertools==5.0.0
 msgpack==0.6.1
-numpy==1.16.6
+numpy==1.21.4
 packaging==20.9
-pandas==0.23.4
+pandas
 pathlib==1.0.1
 pathlib2==2.3.6
 persistent==4.4.3
@@ -57,7 +55,7 @@ pg8000==1.12.5
 Pillow==6.2.2
 pkg-resources==0.0.0
 pluggy==0.13.1
-praat-parselmouth==0.3.2
+praat-parselmouth
 protobuf==3.17.3
 psycopg2==2.8.4
 py==1.11.0
@@ -78,7 +76,7 @@ requests==2.21.0
 rsa==4.5
 scandir==1.10.0
 scikit-learn==0.20.3
-scipy==1.1.0
+scipy
 seaborn==0.9.0
 six==1.14.0
 subprocess32==3.5.4
