Update Readme for Python 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
-/venv
+node_modules
+build
+npm-debug.log
+venv/
 .idea
 *.pyc
 /output
 .DS_Store
 .vscode/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Distribution / packaging
+.Python
+[Bb]in
+[Ii]nclude
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+frontend/package-lock.json
+pyvenv.cfg
+frontend/package-lock.json
+frontend/package-lock.json
