--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 atomicwrites==1.4.0
-attrs==19.1.0
+attrs==21.2.0
 backports.functools-lru-cache==1.6.1
 BTrees==4.5.1
 CacheControl==0.12.6
 cachetools==3.1.1
 certifi==2019.3.9
-cffi
+cffi==1.15.0
 chardet==3.0.4
-Click==7.0
+click==8.0.3
 configparser==4.0.2
 contextlib2==0.6.0.post1
 crcmod==1.7
 cycler==0.10.0
 enum34==1.1.10
+ffmpeg==1.4
 firebase-admin==3.2.1
 flasgger==0.9.2
-Flask==1.1.1
+Flask==2.0.2
 Flask-Cors==3.0.8
 funcsigs==1.0.2
 gevent==1.4.0
@@ -26,6 +27,7 @@ google-auth-httplib2==0.1.0
 google-cloud-core==1.7.2
 google-cloud-firestore==1.9.0
 google-cloud-storage==1.42.3
+google-crc32c==1.3.0
 google-resumable-media==1.3.3
 googleapis-common-protos==1.52.0
 greenlet==0.4.15
@@ -34,29 +36,31 @@ gunicorn==19.9.0
 httplib2==0.20.2
 idna==2.8
 importlib-metadata==2.1.1
-itsdangerous==1.1.0
-Jinja2==2.10.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
 jsonschema==3.0.1
 kiwisolver==1.1.0
 locustio==0.11.0
 lxml==4.5.0
-MarkupSafe==1.1.1
-matplotlib==2.2.4
+MarkupSafe==2.0.1
+matplotlib==3.4.3
 mistune==0.8.4
 more-itertools==5.0.0
 msgpack==0.6.1
 numpy==1.21.4
 packaging==20.9
-pandas
+pandas==1.3.4
 pathlib==1.0.1
 pathlib2==2.3.6
 persistent==4.4.3
 pg8000==1.12.5
 Pillow==6.2.2
+pip-review==1.1.0
 pluggy==0.13.1
-praat-parselmouth
+praat-parselmouth==0.4.0
 protobuf==3.17.3
-psycopg2==2.8.4
+psycopg2==2.9.2
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -66,7 +70,7 @@ pydub==0.23.1
 pympi-ling==1.69
 pyparsing==2.4.6
 pyrsistent==0.14.11
-pytest==4.6.11
+pytest==6.2.5
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.1
@@ -75,21 +79,22 @@ requests==2.21.0
 rsa==4.5
 scandir==1.10.0
 scikit-learn==0.20.3
-scipy
+scipy==1.7.2
 seaborn==0.9.0
 six==1.14.0
 subprocess32==3.5.4
 testing.common.database==2.0.3
 testing.postgresql==1.3.0
+toml==0.10.2
 transaction==2.4.0
 uritemplate==3.0.1
 urllib3==1.24.3
 waitress==1.1.0
 wcwidth==0.2.5
-Werkzeug==0.16.0
+Werkzeug==2.0.2
 zc.lockfile==1.3.0
 ZConfig==3.3.0
 zipp==1.2.0
 ZODB==5.5.1
 zodbpickle==1.0.2
-zope.interface==4.6.0
+zope.interface==5.4.0
