--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,13 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "react",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
-      "src"
-    ],
-  //"exclude": [
-  //    "src/**/**/*",
-  //     "src/**/*.test.*"
-  // ]
+    "src"
+  ]
 }
