--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
+    "chai-enzyme": "^1.0.0-beta.1",
     "coveralls": "^3.0.3",
     "d3-scale": "^3.0.0",
     "enzyme": "^3.11.0",
@@ -117,7 +118,6 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@types/chai-enzyme": "^0.6.6",
-    "chai-enzyme": "^1.0.0-beta.1"
+    "@types/chai-enzyme": "^0.6.6"
   }
 }
