--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cachetools==3.1.1
 certifi==2019.3.9
 cffi==1.15.0
 chardet==3.0.4
+charset-normalizer==2.0.8
 click==8.0.3
 configparser==4.0.2
 contextlib2==0.6.0.post1
@@ -17,7 +18,7 @@ ffmpeg==1.4
 firebase-admin==3.2.1
 flasgger==0.9.2
 Flask==2.0.2
-Flask-Cors==3.0.8
+Flask-Cors==3.0.10
 funcsigs==1.0.2
 gevent==1.4.0
 google-api-core==1.31.3
@@ -42,7 +43,7 @@ Jinja2==3.0.3
 jsonschema==3.0.1
 kiwisolver==1.1.0
 locustio==0.11.0
-lxml==4.5.0
+lxml==4.6.4
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 mistune==0.8.4
@@ -55,8 +56,10 @@ pathlib==1.0.1
 pathlib2==2.3.6
 persistent==4.4.3
 pg8000==1.12.5
-Pillow==6.2.2
+Pillow==8.4.0
+pip-check-reqs==2.3.2
 pip-review==1.1.0
+pipdeptree==2.2.0
 pluggy==0.13.1
 praat-parselmouth==0.4.0
 protobuf==3.17.3
@@ -73,9 +76,9 @@ pyrsistent==0.14.11
 pytest==6.2.5
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.1
+PyYAML==6.0
 pyzmq==18.0.1
-requests==2.21.0
+requests==2.26.0
 rsa==4.5
 scandir==1.10.0
 scikit-learn==0.20.3
@@ -88,8 +91,8 @@ testing.postgresql==1.3.0
 toml==0.10.2
 transaction==2.4.0
 uritemplate==3.0.1
-urllib3==1.24.3
-waitress==1.1.0
+urllib3==1.26.7
+waitress==2.0.0
 wcwidth==0.2.5
 Werkzeug==2.0.2
 zc.lockfile==1.3.0
