--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ importlib-metadata==2.1.1
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
+joblib==1.1.0
 jsonschema==3.0.1
 kiwisolver==1.1.0
 locustio==0.11.0
@@ -81,13 +82,14 @@ pyzmq==18.0.1
 requests==2.26.0
 rsa==4.5
 scandir==1.10.0
-scikit-learn==0.20.3
+scikit-learn==1.0.1
 scipy==1.7.2
 seaborn==0.9.0
 six==1.14.0
 subprocess32==3.5.4
 testing.common.database==2.0.3
 testing.postgresql==1.3.0
+threadpoolctl==3.0.0
 toml==0.10.2
 transaction==2.4.0
 uritemplate==3.0.1
