--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "engines": {
-    "node": "12.22.7"
+    "node": "14.8.2"
   },
   "scripts": {
-    "heroku-prebuild": "cd frontend && npm ci && npm run build --verbose",
-    "heroku-postbuild": "webpack -p --config ./webpack.config.prod.js --progress"
+    "heroku-prebuild": "cd frontend && npm ci && npm run build --verbose"
   }
 }
