--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@types/sizzle": "^2.3.2",
     "@types/styled-components": "^4.1.13",
     "axios": "^0.21.1",
+    "canvas": "^2.9.1",
     "chai": "^4.3.4",
     "chai-enzyme": "^1.0.0-beta.1",
     "d3-scale": "^3.0.0",
@@ -45,7 +46,7 @@
     "immutability-helper": "^3.0.0",
     "jquery": "^3.4.0",
     "js-file-download": "^0.4.5",
-    "konva": "^8.0.1",
+    "konva": "^8.3.6",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "multiselect-dropdown-react": "^1.0.5",
@@ -65,7 +66,7 @@
     "react-konva": "^17.0.2-6",
     "react-media-player": "^0.7.5",
     "react-notifications": "^1.5.0-beta.0",
-    "react-pie-menu": "^0.2.5",
+    "react-pie-menu": "^0.2.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
@@ -75,7 +76,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
-    "styled-components": "^4.2.1",
+    "styled-components": "^4.2.0",
+    "styled-components-theme-connector": "^0.1.3",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
@@ -104,6 +106,9 @@
       "src/**/*.ts",
       "!src/Lib/**/*.js",
       "!src/serviceWorker.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(konva)).*\\.js$"
     ]
   },
   "eslintConfig": {
