--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "react-https-redirect": "^1.1.0",
     "react-konva": "^17.0.2-6",
     "react-media-player": "^0.7.5",
+    "react-modal": "^3.15.1",
     "react-notifications": "^1.5.0-beta.0",
     "react-pie-menu": "^0.2.4",
     "react-redux": "^6.0.0",
