--- a/frontend/package.json
+++ b/frontend/package.json
@@ -120,7 +120,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "@types/chai-enzyme": "^0.6.6"
   }
