--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,10 +32,13 @@
     "@types/sinon": "^7.0.10",
     "@types/sizzle": "^2.3.2",
     "@types/styled-components": "^4.1.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "axios": "^0.21.1",
     "canvas": "^2.9.1",
     "chai": "^4.3.4",
     "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.3",
     "d3-scale": "^3.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -82,7 +85,7 @@
     "styled-components-theme-connector": "^0.1.3",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000",
+    "typescript": "^5.2.2",
     "xlsx": "^0.17.4"
   },
   "scripts": {
