--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,26 +1,26 @@
-name: Development workflow
+# name: Development workflow
 
-on:
-  push:
-    branches:
-      - development
+# on:
+#   push:
+#     branches:
+#       - development
 
-jobs:
-  deploy:
-    runs-on: ubuntu-20.04
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-20.04
 
-    steps:
-      - name: Development Code
-        uses: actions/checkout@v3
-      - name: Use Node.js 14.8.2
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install
-      - run: npm run build --if-present
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: 'metilda-development'
-          heroku_email: 'metilda.uw@gmail.com'
+#     steps:
+#       - name: Development Code
+#         uses: actions/checkout@v3
+#       - name: Use Node.js 14.8.2
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '14'
+#       - run: npm install
+#       - run: npm run build --if-present
+#       - name: Deploy to Heroku
+#         uses: akhileshns/heroku-deploy@v3.12.12
+#         with:
+#           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#           heroku_app_name: 'metilda-development'
+#           heroku_email: 'metilda.uw@gmail.com'
