--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ firebase-admin==3.2.1
 flasgger==0.9.2
 Flask==2.0.2
 Flask-Cors==3.0.10
+Flask-Compress==1.15
 funcsigs==1.0.2
 gevent==21.12.0
 google-api-core==1.31.3
