--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,9 +57,7 @@
     "npm-run-all": "^4.1.5",
     "query-string": "^6.4.0",
     "react": "^16.14.0",
-    "react-data-export": "^0.6.0",
     "react-dom": "^16.14.0",
-    "react-export-excel": "^0.5.2",
     "react-file-reader": "^1.1.4",
     "react-file-reader-input": "^2.0.0",
     "react-firebase-hooks": "^3.0.5",
@@ -86,7 +84,7 @@
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
     "typescript": "^5.2.2",
-    "xlsx": "^0.17.4"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "scripts": {
     "build-css": "node-sass --include-path ./src --include-path ./node_modules src/ -o src/",
