--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,6 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "axios": "^0.21.1",
-    "canvas": "^2.9.1",
     "chai": "^4.3.4",
     "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^1.0.0-rc.3",
@@ -44,7 +43,6 @@
     "enzyme-adapter-react-16": "^1.11.2",
     "file-saver": "^2.0.2",
     "firebase": "^8.2.4",
-    "firebaseui": "^4.1.0",
     "font-awesome": "^4.7.0",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.4.0",
@@ -52,20 +50,16 @@
     "konva": "^8.3.6",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.4",
-    "multiselect-dropdown-react": "^1.0.5",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "query-string": "^6.4.0",
     "react": "^16.14.0",
-    "react-data-export": "^0.6.0",
     "react-dom": "^16.14.0",
-    "react-export-excel": "^0.5.2",
     "react-file-reader": "^1.1.4",
     "react-file-reader-input": "^2.0.0",
     "react-firebase-hooks": "^3.0.5",
     "react-fontawesome": "^1.7.1",
     "react-ga": "^2.7.0",
-    "react-html-parser": "^2.0.2",
     "react-https-redirect": "^1.1.0",
     "react-konva": "^17.0.2-6",
     "react-media-player": "^0.7.5",
@@ -82,11 +76,10 @@
     "redux-thunk": "^2.3.0",
     "sinon": "^7.3.0",
     "styled-components": "^4.2.0",
-    "styled-components-theme-connector": "^0.1.3",
     "tone": "^13.4.9",
     "tslint": "^5.14.0",
     "typescript": "^5.2.2",
-    "xlsx": "^0.17.4"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "scripts": {
     "build-css": "node-sass --include-path ./src --include-path ./node_modules src/ -o src/",
