--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   },
   "scripts": {
     "heroku-prebuild": "cd frontend && npm ci && npm run build --verbose"
+  },
+  "dependencies": {
+    "axios": "^1.7.8"
   }
 }
