Error Handling, Loaders, Student Grade Page, Teacher Grade Page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^6.7.4",
     "audio-react-recorder": "^1.0.5",
     "axios": "^0.21.1",
+    "babel-jest": "^24.9.0",
     "canvas": "^2.9.1",
     "chai": "^4.3.4",
     "chai-enzyme": "^1.0.0-beta.1",
@@ -65,7 +66,6 @@
     "react-data-export": "^0.6.0",
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-export-excel": "^0.5.2",
     "react-file-drop": "^3.1.6",
     "react-file-reader": "^1.1.4",
     "react-file-reader-input": "^2.0.0",
